[gd_scene load_steps=2 format=3 uid="uid://ipjdvqjhnvk4"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
color = Color(0, 0, 0, 0.5)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "MENU"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuPanel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quitter"
